update grobid version, review primitive inits